<resources>
    <string name="app_name">UniSport</string>
    <string name="login">Вход</string>
    <string name="phone_number">Номер телефона</string>
    <string name="password">Пароль</string>
    <string name="no_account_question">Нет аккаунта?</string>
    <string name="registration">Регистрация</string>
    <string name="continue_next">Далее</string>
    <string name="onboarding_title_1">Спортивные кружки для детей</string>
    <string name="onboarding_title_2">Открытые чемпионаты</string>
    <string name="onboarding_title_3">Спортивные площадки</string>
    <string name="onboarding_title_4">Спортивные события</string>
    <string name="onboarding_description_1">Делаем спорт доступнее для детей города Екатеринбург</string>
    <string name="onboarding_description_2">Участвуйте в соревнованиях по любимому виду спорта</string>
    <string name="onboarding_description_3">Подскажем ближайшие места для занятия спортом вместе с близкими</string>
    <string name="onboarding_description_4">Регистрируйтесь на спортивные события в вашем городе</string>
    <string name="title_registration_name">Как вас зовут?</string>
    <string name="hint_registration_name">Ваше имя</string>
    <string name="hint_registration_surname">Ваше фамилия</string>
    <string name="title_registration_phone">Ваш номер телефона</string>
    <string name="hint_registration_phone">Номер телефона</string>
    <string name="title_registration_password">Придумайте пароль</string>
    <string name="hint_registration_password">Пароль</string>
    <string name="title_registration_role">Расскажите нам, кто вы</string>
    <string name="title_registration_count_child"> У вас есть дети?</string>
    <string name="text_error_login">Неправильный номер или пароль</string>
    <string name="text_error_register_password">Пароль должен быть не меньше 8 символов</string>
    <string name="text_section">Секции</string>
    <string name="text_map">Карта</string>
    <string name="text_events">События</string>
    <string name="text_profile">Профиль</string>
    <string name="text_hint_section_search">Секция, мероприятие</string>
    <string name="text_hint_map_search">Площадка, место, парк</string>
    <string name="text_more_detailed">Подробнее</string>
    <string name="text_sports_ground">Спортплощадка</string>
    <string name="text_section_one">Секция</string>
    <string name="text_sports_review">Обзор</string>
    <string name="text_information">Информация</string>
    <string name="text_address">Адрес</string>
    <string name="text_contacts">Контакты</string>
    <string name="text_teachers">Преподаватели</string>
    <string name="text_to_enroll">Записаться</string>
    <string name="text_where_go">Куда сходить</string>
    <string name="text_where_participant">Где поучаствовать</string>
</resources>