<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragments.LoginFragment"
    android:background="@drawable/image_background_login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/button_back_login"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="@drawable/button_back_image"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:fontFamily="@font/mabrypro_bold"
            android:textColor="@color/text_color_title"
            android:textSize="36sp"
            android:includeFontPadding="false"
            android:layout_marginTop="40dp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:textColorHint="@color/text_color_hint"
            app:counterTextColor="@color/text_color_hint"
            app:cursorColor="@color/text_color_edit_text"
            style="@style/CustomTextInputLayout"
            app:hintEnabled="false"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_phone_number"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:minHeight="60dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/phone_number"
                android:textColorHint="@color/text_color_hint"
                android:fontFamily="@font/mabrypro_medium"
                android:textSize="15sp"
                android:singleLine="true"
                android:textCursorDrawable="@drawable/cursor_style_edit_text"
                android:textColor="@color/text_color_edit_text"
                android:inputType="phone"
                style="@style/CustomTextInputEditText"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="9dp"
            android:textColorHint="@color/text_color_hint"
            app:counterTextColor="@color/text_color_hint"
            app:cursorColor="@color/text_color_edit_text"
            style="@style/CustomTextInputLayout"
            app:hintEnabled="false"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:minHeight="60dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/password"
                android:textColorHint="@color/text_color_hint"
                android:fontFamily="@font/mabrypro_medium"
                android:textSize="15sp"
                android:singleLine="true"
                android:textCursorDrawable="@drawable/cursor_style_edit_text"
                android:textColor="@color/text_color_edit_text"
                android:inputType="textPassword"
                style="@style/CustomTextInputEditText"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/text_error_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_error_login"
            android:fontFamily="@font/mabrypro_medium"
            android:textColor="@color/color_error"
            android:textSize="14sp"
            android:layout_marginTop="9dp"
            android:visibility="gone"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_account_question"
                android:fontFamily="@font/mabrypro_medium"
                android:textColor="@color/text_color_title"
                android:textSize="14sp"
                android:layout_marginEnd="4dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="//"
                android:textColor="@color/text_color_second"
                android:fontFamily="@font/mabrypro_medium"
                android:textSize="14sp"
                android:layout_marginEnd="4dp"
                />

            <TextView
                android:id="@+id/text_to_registration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registration"
                android:textColor="@color/black"
                android:fontFamily="@font/mabrypro_bold"
                android:textSize="14sp"
                />

        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/color_block_button"
            android:fontFamily="@font/mabrypro_medium"
            android:paddingVertical="21dp"
            android:text="@string/continue_next"
            android:includeFontPadding="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:cornerRadius="100dp"
            android:lineSpacingExtra="4sp"
            android:enabled="false" />

        <ProgressBar
            android:id="@+id/progress_login"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:indeterminateTint="@android:color/black"
            android:visibility="invisible"
            tools:visibility="visible"/>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>