<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="32dp"
        android:elevation="0dp"
        android:outlineSpotShadowColor="@android:color/transparent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:scaleType="centerCrop"
            android:src="@drawable/image_onboarding_fourth" />

        <ImageButton
            android:id="@+id/button_close_ground"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_gravity="end"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="21dp"
            android:background="@drawable/icon_close_sheet_menu"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="32dp"
        android:elevation="0dp"
        android:outlineSpotShadowColor="@android:color/transparent"
        android:layout_marginTop="-50dp"
        android:background="@color/white">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="24dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/color_ground_sheet_tilte"
                        android:fontFamily="@font/mabrypro_medium"
                        android:text="@string/text_sports_ground"
                        android:textSize="16sp"
                        android:includeFontPadding="true"
                        />

                    <TextView
                        android:id="@+id/name_ground"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/color_ground_sheet_name"
                        android:fontFamily="@font/mabrypro_bold"
                        tools:text="Скейт-парк Ходынское поле"
                        android:textSize="24sp"
                        android:layout_marginTop="4dp"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/icon_time_ground"
                            android:layout_marginEnd="8dp"
                            />

                        <TextView
                            android:id="@+id/time_ground"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/text_color_title"
                            android:fontFamily="@font/mabrypro_bold"
                            tools:text="17:00 - 21:00"
                            android:textSize="14sp"
                            android:includeFontPadding="false"
                            android:layout_gravity="center"
                            />

                    </LinearLayout>

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icon_line_profile"
                        android:layout_marginTop="12dp"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/background_information_ground"
                        android:paddingVertical="7dp"
                        android:paddingHorizontal="12dp"
                        android:layout_marginTop="14dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:fontFamily="@font/mabrypro_medium"
                            android:text="@string/text_sports_review"
                            android:textSize="14sp"
                            android:includeFontPadding="false"
                            android:padding="2dp"
                            />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:background="@color/color_ground_sheet_bottom">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginVertical="16dp"
                        android:background="@color/white"
                        android:elevation="0dp"
                        app:cardCornerRadius="24dp"
                        android:outlineSpotShadowColor="@android:color/transparent">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_marginHorizontal="16dp"
                            android:layout_marginVertical="16dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <ImageView
                                    android:layout_width="32dp"
                                    android:layout_height="32dp"
                                    android:src="@drawable/icon_information_ground"/>

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical"
                                    android:layout_marginStart="14dp">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:textColor="@color/color_ground_sheet_name"
                                        android:fontFamily="@font/mabrypro_bold"
                                        android:text="@string/text_information"
                                        android:textSize="18sp"
                                        />

                                    <TextView
                                        android:id="@+id/info_ground"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:textColor="@color/color_text_ground_sheet"
                                        android:fontFamily="@font/mabrypro_medium"
                                        tools:text="Новая спортивная площадка установлена на территории четырнадцатой школы, в местечке Авдотьино в Иванове"
                                        android:textSize="18sp"
                                        android:layout_marginTop="4dp"
                                        />

                                </LinearLayout>

                            </LinearLayout>

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:src="@drawable/image_line_shhet_ground"
                                android:layout_marginVertical="10dp"/>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <ImageView
                                    android:layout_width="32dp"
                                    android:layout_height="32dp"
                                    android:src="@drawable/icon_place_ground"/>

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical"
                                    android:layout_marginStart="14dp">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:textColor="@color/color_ground_sheet_name"
                                        android:fontFamily="@font/mabrypro_bold"
                                        android:text="@string/text_address"
                                        android:textSize="18sp"
                                        />

                                    <TextView
                                        android:id="@+id/place_ground"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:textColor="@color/color_text_ground_sheet"
                                        android:fontFamily="@font/mabrypro_medium"
                                        tools:text="г. Москва, ул. Красногвардейский  бульвар, 11, стр. 1"
                                        android:textSize="18sp"
                                        android:layout_marginTop="4dp"
                                        />

                                </LinearLayout>

                            </LinearLayout>

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:src="@drawable/image_line_shhet_ground"
                                android:layout_marginVertical="10dp"/>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <ImageView
                                    android:layout_width="32dp"
                                    android:layout_height="32dp"
                                    android:src="@drawable/icon_contacts_ground"/>

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical"
                                    android:layout_marginStart="14dp">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:textColor="@color/color_ground_sheet_name"
                                        android:fontFamily="@font/mabrypro_bold"
                                        android:text="@string/text_contacts"
                                        android:textSize="18sp"
                                        />

                                    <TextView
                                        android:id="@+id/contacts_ground"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:textColor="@color/color_text_ground_sheet"
                                        android:fontFamily="@font/mabrypro_medium"
                                        tools:text="sokolova.sofico@yandex.ru"
                                        android:textSize="18sp"
                                        android:layout_marginTop="4dp"
                                        />

                                </LinearLayout>

                            </LinearLayout>

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

            </LinearLayout>


        </ScrollView>

    </androidx.cardview.widget.CardView>

</LinearLayout>